5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1756_1583.log
== TEST (2019-05-28 17:56:14) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:56:29) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)
-- EXECUTION TIME:
0.160155
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:56:33) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:58:27) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

while (len(c) % 3 == 0 and len(c) >= 3):
	N = n1 + "." + n2 + "." + n3
print(N)
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:58:50) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

while (len(c) % 3 == 0 and len(c) >= 3):
	N = n1 + "." + n2 + "." + n3
	print(N)
-- OUTPUT:
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123..
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:03:19) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

while (i < len(c)):
	if (len(c) % 3 == 0 and len(c) >= 3):
		N = n1 + "." + n2 + "." + n3
		print(N)
	else:
		N = 0
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (i < len(c)):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:03:33) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
i = 0
while (i < len(c)):
	if (len(c) % 3 == 0 and len(c) >= 3):
		N = n1 + "." + n2 + "." + n3
		print(N)
	else:
		N = 0
	i = i + 1
-- OUTPUT:
123..
123..
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:04:11) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

if (len(c) % 3 == 0 and len(c) >= 3):
	N = n1 + "." + n2 + "." + n3
	print(N)
else:
	N = 0
	
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:04:23) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

if (len(c) % 3 == 0 and len(c) >= 3):
	N = n1 + "." + n2 + "." + n3
	print(N)

	
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 18:04:32) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

if (len(c) % 3 == 0 and len(c) >= 3):
	N = n1 + "." + n2 + "." + n3
	print(N)

	
-- EXECUTION TIME:
0.352949
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123..
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789000987654321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:07:50) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]

if (len(c) % 3 == 0 and len(c) >= 3):
	N = n1 + "." + n2 + "." + n3
	print(N)

	
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:08:25) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:08:42) 
-- CODE:
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- OUTPUT:
123..
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:11:01) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:11:24) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:15:42) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 18:27:10) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:04:55) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:05:04) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n1 = c[0:3]
n2 = c[3:6]
n3 = c[6:]
N = n1 + "." + n2 + "." + n3
print(N)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:57:34) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n = ""
i = 0

while (i < len(c)):
	if (c == 3):
		n = n + "."
	i = i + 1
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:01:31) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n = ""
i = 0

while (i < len(c)):
	if (c == 3):
		i = 1
		n = n + "."
	n = n + c[i]
	i = i + 1
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:25:35) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n = ""
i = 0
a = 1
while (i < len(c)):
	if (a == 4):
		a = 1
		n = n + "."
	n = n + c[i]
	i = i + 1
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:27:54) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n = ""
i = 0
a = 1
while (i < len(c)):
	if (a == 4):
		a = 1
		n = n + "."
	n = n + c[i]
	a = a + 1
	i = i + 1
print(n)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:28:01) 
-- CODE:
from numpy import*
c = input("Caracteres: ")
n = ""
i = 0
a = 1
while (i < len(c)):
	if (a == 4):
		a = 1
		n = n + "."
	n = n + c[i]
	a = a + 1
	i = i + 1
print(n)

	
-- EXECUTION TIME:
0.439388
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
